--- a/website/editor/src/styles.css
+++ b/website/editor/src/styles.css
@@ -334,5 +334,5 @@ h3 {
 
 .fixedHeaderContainer {
   top: 0;
-  z-index: 10000;
+  z-index: 99999;
 }
